--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -6,7 +6,7 @@
     <p>{{post.content }}</p>
     <mat-action-row>
         <button mat-button color="accent" >Edit</button>
-        <button mat-button color="warn" >Delete</button>
+        <button mat-button color="warn" (click)="onDelete()" >Delete</button>
       </mat-action-row>
   </mat-expansion-panel>
 </mat-accordion>
