--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -1,13 +1,34 @@
-<mat-accordion multi="true" *ngIf="posts.length > 0">
+<mat-spinner *ngIf="isLoading"></mat-spinner>
+<mat-accordion multi="true" *ngIf="posts.length > 0 && !isLoading">
   <mat-expansion-panel *ngFor="let post of posts">
     <mat-expansion-panel-header>
-      {{post.title}}
+      {{ post.title }}
     </mat-expansion-panel-header>
-    <p>{{post.content }}</p>
-    <mat-action-row>
-        <button mat-button color="accent" >Edit</button>
-        <button mat-button color="warn" (click)="onDelete()" >Delete</button>
-      </mat-action-row>
+    <div class="post-image">
+      <img [src]="post.imagePath" [alt]="post.title" />
+    </div>
+    <p>{{ post.content }}</p>
+    <mat-action-row *ngIf="userIsAuth && userIsCreator === post.creator">
+      <a
+        [routerLink]="['/edit', post.id]"
+        routerLinkActive="router-link-active"
+        mat-button
+        color="accent"
+        >Edit</a
+      >
+      <button mat-button color="warn" (click)="onDelete(post.id,post.creator)">
+        Delete
+      </button>
+    </mat-action-row>
   </mat-expansion-panel>
 </mat-accordion>
-<p class="info-text mat-body-1" *ngIf="posts.length === 0">No post added yet!</p>
+<mat-paginator
+  [length]="totalPosts"
+  [pageSize]="postsPerPage"
+  [pageSizeOptions]="pageSizeOptions"
+  (page)="onChangePage($event)"
+  *ngIf="posts.length > 0"
+>
+</mat-paginator>
+
+ <p class="info-text mat-body-1" *ngIf="posts.length === 0">No post added yet!</p> 
